--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -36,7 +36,7 @@
 
   <main class="container">
       <section class="banner">
-        <img src="../imagens/banner.png" alt="Banner principal" class="banner-img" />
+        <img src="../imagens/banner-index.png" alt="Banner principal" class="banner-img" />
       </section>
 
     <section class="catalogo">
@@ -60,6 +60,6 @@
     </div>
   </footer>
 
-  <script src="../js/index.js"></script>
+  <script src="../js/index.js" defer></script>
 </body>
 </html>
