--- a/src/main/resources/static/html/sobre-nos.html
+++ b/src/main/resources/static/html/sobre-nos.html
@@ -88,6 +88,6 @@
     </div>
   </footer>
 
-  <script src="../js/index.js"></script>
+  <script src="../js/index.js" defer></script>
 </body>
 </html>
